--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@openzeppelin/contracts": "^5.0.2",
     "@reown/appkit-adapter-wagmi": "^1.0.1",
     "@tanstack/react-query": "^5.56.2",
+    "chai": "^5.1.1",
     "connectkit": "^1.8.2",
     "next": "14.1.0",
     "react": "^18.3",
