--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.56.2",
     "chai": "^5.1.1",
     "connectkit": "^1.8.2",
+    "lucide-react": "^0.445.0",
     "next": "14.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
