--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "connectkit": "^1.8.2",
     "lucide-react": "^0.445.0",
     "next": "14.1.0",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18.3",
     "react-dom": "^18.3",
+    "react-hot-toast": "^2.4.1",
     "thirdweb": "^5",
     "viem": "^2.21.9",
     "wagmi": "^2.12.12"
