--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.445.0",
     "next": "14.1.0",
     "nextjs-toploader": "^3.6.15",
+    "pinata-web3": "^0.4.1",
     "react": "^18.3",
     "react-dom": "^18.3",
     "react-hot-toast": "^2.4.1",
